--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1"
   }
